not showing text on color-safe button

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -106,8 +106,8 @@ html
           .row
             .col-md-2
               //- br
-              #colorblind_div(style='visibility: hidden;')
-                input#colorblind_safe.btn_tooltip(type='checkbox', data-toggle='toggle', data-style='ios', data-on="<i class='glyphicon glyphicon-eye-open'></i>colorblind safe", data-off="<i class='glyphicon glyphicon-eye-open'></i>common color", data-size='mini',data-onstyle='success', data-offstyle='info')
+              #colorblind_div(style='visibility: hidden;padding-left:4px')
+                input#colorblind_safe.btn_tooltip(type='checkbox', data-toggle='toggle', data-style='ios', data-on="<i class='glyphicon glyphicon-eye-open'></i>", data-off="<i class='glyphicon glyphicon-eye-open'></i>", data-size='mini',data-onstyle='success', data-offstyle='info')
               svg#coreTree_legend
             .col-md-10
               #speciesTreeDiv
