use S_pneumoniae616 as index page

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
     script.
-      var speciesAbbr='m_test'
-    script(src='dataset/m_test/metaConfiguration.js')
+      var speciesAbbr='S_pneumoniae616'
+    script(src='dataset/S_pneumoniae616/metaConfiguration.js')
