add tooltip for panzoom button and search buttons

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -146,12 +146,12 @@ html
             //#dropdown_list2.col-md-4
             .col-md-2
               #searchAccession-group.input-group
-                span.input-group-addon.primary.sm-customized
+                span#searchAccession.input-group-addon.primary.sm-customized.btn_tooltip
                   span.glyphicon.glyphicon-search
                 input.form-control.sm-customized.tree_search(type='text', placeholder='accession', aria-describedby='sizing-addon1',oninput='search_accession(this.value)')
             .col-md-2
               #searchAnnotation-group.input-group
-                span.input-group-addon.primary.sm-customized
+                span#searchAnnotation.input-group-addon.primary.sm-customized.btn_tooltip
                   span.glyphicon.glyphicon-search
                 input.form-control.sm-customized.tree_search(type='text', placeholder='annotation', aria-describedby='sizing-addon1',oninput='search_annotation(this.value)')
             #download_geneTree.col-md-1.btn_tooltip
