--- a/views/home.jade
+++ b/views/home.jade
@@ -20,39 +20,32 @@ html
         br
         .col-md-1
       .row.panX-text
-        .col-md-8
+        .col-md-12
           br
           p panX is a software package for comprehensive pan-genome analysis and web-based interactive visualization and dynamic exploration.
           p It encompasses various interconnected viewers, allows rapid search via gene name, diversity, duplications, annotation, integrates strain-associated meta-data (collection data, country, resistance, etc.), gene presence/absence pattern, gene gain/loss event on phylogeny.
           p panX helps users to gain insights into bacterial genomic diversity and the dynamics of the accessory genes linked with habitat adaptation, antibiotic resistance, virulence, as well as epidemiological markers.
-        br
-        //.col-md-6
-          img(src='./images/Pm.jpg', style='width:100%;')
-          //-#components_interaction
-            //- .alert.alert-success(role='alert') Interactive pan-genomic data visualization
-            //- .item
-            //-   img(data-gifffer='./images/overall2.gif', style='width:1180px;height:696px;')
-            //- br
+      br
       .row.panX-text
         .col-md-6
           .thumbnail.shadow_homepagex
-            img(src='./images/Demo-Sp616.gif', alt='...', style='width:100%;')
+            img(src='./images/Demo-Sp616.gif', alt='...', style='width:100%;height:320px')
             .caption
               h4 Epidemiology of 616 Streptococcus pneumoniae strains
-              p Croucher et al. 2015
+              p Croucher et al. (2015)
               p
                 a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Sp616') Demo
                 a.btn.btn-default(href='./S_pneumoniae616', role='button') Explore
 
         .col-md-6
           .thumbnail.shadow_homepagex
-            img(src='./images/Pm_case.png', alt='...', style='width:100%;')
+            img(src='./images/Pm_case.png', alt='...', style='width:100%;height:320px')
             .caption
-              h4 Prochlorococcus marinus gene presence/absence and gain/loss pattern
-              p
+              h4 Diverse Prochlorococcus genomes: gene gain/loss pattern
+              p Biller et al. (2014)
               p
                 a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Pm') Demo
-                a.btn.btn-default(href='./Pmnawg', role='button') Explore
+                a.btn.btn-default(href='./P_marinus_meta', role='button') Explore
         //.col-md-4
           .thumbnail.shadow_homepagex
             img(src='./images/comparative-dashborad.jpg', alt='...', style='width:100%;')
