--- a/views/layout.jade
+++ b/views/layout.jade
@@ -132,7 +132,7 @@ html
                     button#geneTreeUnroot.triplet-button-single.triplet-button-single-toggle.option3(type='button')
                       img(src='images/unrooted.png')
               input#geneTreeScale.btn_tooltip(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Scale', data-off='Scale', data-size='mini')
-              input#geneTreeOrientation(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='right-left', data-off='left-right', data-size='mini', data-onstyle='primary', data-offstyle='info')
+              input#geneTreeOrientation(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Right-left', data-off='Left-right', data-size='mini', data-onstyle='primary', data-offstyle='info')
               button#geneTree_height_plus.btn.btn-xs.btn-primary.btn_tooltip
                 span.glyphicon.glyphicon-resize-full
               button#geneTree_height_minus.btn.btn-xs.btn-primary.btn_tooltip
@@ -148,12 +148,12 @@ html
               #searchAccession-group.input-group
                 span#searchAccession.input-group-addon.primary.sm-customized.btn_tooltip
                   span.glyphicon.glyphicon-search
-                input.form-control.sm-customized.tree_search(type='text', placeholder='accession', aria-describedby='sizing-addon1',oninput='search_accession(this.value)')
+                input.form-control.sm-customized.tree_search(type='text', placeholder='Accession', aria-describedby='sizing-addon1',oninput='search_accession(this.value)')
             .col-md-2
               #searchAnnotation-group.input-group
                 span#searchAnnotation.input-group-addon.primary.sm-customized.btn_tooltip
                   span.glyphicon.glyphicon-search
-                input.form-control.sm-customized.tree_search(type='text', placeholder='annotation', aria-describedby='sizing-addon1',oninput='search_annotation(this.value)')
+                input.form-control.sm-customized.tree_search(type='text', placeholder='Annotation', aria-describedby='sizing-addon1',oninput='search_annotation(this.value)')
             #download_geneTree.col-md-1.btn_tooltip
           .row
             .col-md-10
