--- a/views/layout.jade
+++ b/views/layout.jade
@@ -72,7 +72,7 @@ html
           .row
             #dropdown_list.col-md-3.btn_tooltip
             .col-md-8#LeftTreeButtons(style='vertical-align: top')
-              .col-md-3.triplet-button-group
+              .col-md-2.triplet_layout_width.triplet-button-group
                 button#speciesTreeLayouts.triplet-button-control.triplet-button-toggle.speciesTree.btn_tooltip(type='button') Layouts
                     span.fa.fa-plus.triplet-button-space(aria-hidden='true')
                 ul#options.list-inline
@@ -118,7 +118,7 @@ html
             #genetree_title Gene tree (individual gene)
           .row
             .col-md-7#genetree_buttons
-              .col-md-3.triplet-button-group
+              .col-md-2.triplet_layout_width.triplet-button-group
                 button#geneTreeLayouts.triplet-button-control.triplet-button-toggle.geneTree.btn_tooltip(type='button') Layouts
                   span.fa.fa-plus.triplet-button-space(aria-hidden='true')
                 ul#options.list-inline
