--- a/views/footer.jade
+++ b/views/footer.jade
@@ -7,8 +7,7 @@ footer.footer-distributed
           a(href='#') Methods
           |         |
           a(href='#') Tutorials
-          p.footer-author Software and website: design by Wei Ding and Richard Neher
-          p.footer-author Software and website: implementation by Wei Ding
+          p.footer-author Software and website: Wei Ding and Richard Neher
           p.footer-author Logo and website &copy; 2016 Wei Ding
       .footer-center
         #contacts
