enhance flexibility of adding new columns in datatable via newColumnConfig.js

--- a/views/P_aeruginosa.jade
+++ b/views/P_aeruginosa.jade
@@ -4,3 +4,4 @@ block content
     script.
       var speciesAbbr='P_aeruginosa'
     script(src='dataset/P_aeruginosa/metaConfiguration.js')
+    script(src='dataset/P_aeruginosa/newColumnConfig.js')
