--- a/views/home.jade
+++ b/views/home.jade
@@ -29,23 +29,25 @@ html
       .row.panX-text
         .col-md-6
           .thumbnail.shadow_homepagex
-            img(src='./images/Demo-Sp616.gif', alt='...', style='width:100%;height:320px')
             .caption
               h4 Epidemiology of 616 Streptococcus pneumoniae strains
-              p Croucher et al. (2015)
+              p
+                a(href='https://www.nature.com/articles/sdata201558') Croucher et al. (2015)
               p
                 a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Sp616') Demo
                 a.btn.btn-default(href='./S_pneumoniae616', role='button') Explore
+            img(src='./images/Demo-Sp616.gif', alt='...', style='width:100%;height:320px')
 
         .col-md-6
           .thumbnail.shadow_homepagex
-            img(src='./images/Pm_case.png', alt='...', style='width:100%;height:320px')
             .caption
               h4 Diverse Prochlorococcus genomes: gene gain/loss pattern
-              p Biller et al. (2014)
+              p
+                a(href='https://www.nature.com/articles/sdata201434') Biller et al. (2014)
               p
                 a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Pm') Demo
                 a.btn.btn-default(href='./P_marinus_meta', role='button') Explore
+            img(src='./images/Pm_case.png', alt='...', style='width:100%;height:320px')
         //.col-md-4
           .thumbnail.shadow_homepagex
             img(src='./images/comparative-dashborad.jpg', alt='...', style='width:100%;')
