update tutorial and footer; remove old pics

--- a/views/footer.jade
+++ b/views/footer.jade
@@ -2,11 +2,14 @@ footer.footer-distributed
       .footer-left
         img(src='images/pan-white-out.svg',style='width:60%')
         p.footer-links
-          a(href='#') Applications
+          a(href='./')
+            u Applications
           |         |
-          a(href='#') Methods
+          a(href='./pipeline')
+            u Methods
           |         |
-          a(href='#') Tutorials
+          a(href='./tutorial')
+            u Tutorials
           p.footer-author Software and website: Wei Ding and Richard Neher
           p.footer-author Logo and website &copy; 2016 Wei Ding
       .footer-center
@@ -14,20 +17,24 @@ footer.footer-distributed
           i.fa.fa-envelope
           p
             span
-              a(href='mailto:wei.ding@tuebingen.mpg.de') wei.ding at tuebingen.mpg.de
+              a(href='mailto:wei.ding@tuebingen.mpg.de')
+                u wei.ding at tuebingen.mpg.de
 
             span
-              a(href='mailto:richard.neher@unibas.ch') richard.neher at unibas.ch
+              a(href='mailto:richard.neher@unibas.ch')
+                u richard.neher at unibas.ch
         #address
           i.fa.fa-map-marker
           p
             span
               br
             span
-              a(href='http://www.eb.tuebingen.mpg.de/') Max Planck Institute for Developmental Biology
+              a(href='http://www.eb.tuebingen.mpg.de/')
+                u Max Planck Institute for Developmental Biology
             span  Spemannstrasse 35, 72076 Tuebingen, Germany
             span
-              a(href='http://www.biozentrum.unibas.ch/') Biozentrum, University of Basel
+              a(href='http://www.biozentrum.unibas.ch/')
+                u Biozentrum, University of Basel
             span  Klingelbergstrasse 50/70, CH-4056 Basel, Switzerland
         #repo
           i.fa.fa-github
@@ -35,9 +42,11 @@ footer.footer-distributed
             span
               br
             span
-              a(href='https://github.com/neherlab/pan-genome-analysis') pan-genome-analysis
+              a(href='https://github.com/neherlab/pan-genome-analysis')
+                u pan-genome-analysis
             span
-              a(href='https://github.com/neherlab/pan-genome-visualization/') pan-genome-visualization
+              a(href='https://github.com/neherlab/pan-genome-visualization/')
+                u pan-genome-visualization
       .footer-right
         p.footer-website-about
           span About panX
