add tooltip(tree-tips) z-index

--- a/public/stylesheets/d3-tip.css
+++ b/public/stylesheets/d3-tip.css
@@ -1,5 +1,6 @@
 /* modified from http://rawgit.com/Caged/d3-tip/master/examples/example-styles.css */
 .d3-tip {
+  z-index: 4;
   line-height: 1;
   font-weight: bold;
   padding: 12px;
