--- a/views/home.jade
+++ b/views/home.jade
@@ -18,13 +18,22 @@ html
         br
         br
         br
-        .col-md-1
+        br
+        br
       .row.panX-text
-        .col-md-12
+        #logo.col-md-2
+          img(src='images/pan-blue-noReads.svg', style='width:230;height:209px;')
+          .col-md-2
+        .col-md-8
           br
-          p panX is a software package for comprehensive pan-genome analysis and web-based interactive visualization and dynamic exploration.
-          p It encompasses various interconnected viewers, allows rapid search via gene name, diversity, duplications, annotation, integrates strain-associated meta-data (collection data, country, resistance, etc.), gene presence/absence pattern, gene gain/loss event on phylogeny.
-          p panX helps users to gain insights into bacterial genomic diversity and the dynamics of the accessory genes linked with habitat adaptation, antibiotic resistance, virulence, as well as epidemiological markers.
+          p panX consists of a pan-genome identification pipeline and an web-application for interactive visualization of the pan-genome. The pipeline is implemented in python and is based on DIAMOND and MCL.
+          p The web application consists of interactive connected tree viewers for the species tree and individual gene trees, an alignment viewer, and charts displaying pan-genome statistics. Gene clusters can be searched and filtered by name, annotation, and their phylogenetic properties such as diversity or the number of gene gain/loss events.
+
+          p Metadata associated with the strains and gene presence/absence patterns can be mapped onto the species tree. Such mapping facilitate the identification of genes associated with particular ecological niches, phenotypes such as antibiotic resistance, virulence, or epidemiological parameters such as host age.
+      br
+      br
+      br
+      h3 Show cases of panX functionalities:
       br
       .row.panX-text
         .col-md-6
@@ -36,7 +45,8 @@ html
               p
                 a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Sp616') Demo
                 a.btn.btn-default(href='./S_pneumoniae616', role='button') Explore
-            img(src='./images/Demo-Sp616.gif', alt='...', style='width:100%;height:320px')
+            a(href='./S_pneumoniae616')
+              img(src='./images/Demo-Sp616.gif', alt='...', style='width:100%;height:320px')
 
         .col-md-6
           .thumbnail.shadow_homepagex
@@ -47,7 +57,8 @@ html
               p
                 a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Pm') Demo
                 a.btn.btn-default(href='./P_marinus_meta', role='button') Explore
-            img(src='./images/Pm_case.png', alt='...', style='width:100%;height:320px')
+            a(href='./P_marinus_meta')
+              img(src='./images/Pm_case.png', alt='...', style='width:100%;height:320px')
         //.col-md-4
           .thumbnail.shadow_homepagex
             img(src='./images/comparative-dashborad.jpg', alt='...', style='width:100%;')
@@ -98,6 +109,22 @@ html
               img(src='./images/Demo-Pm.gif', style='width:100%;')
             .modal-footer
               button.btn.btn-info(type='button', data-dismiss='modal') Close
+
+      br
+      br
+      br
+      h3 Pan-genomes from NCBI RefSeq genomes:
+      br
+      #dc_data_count.col-md-2
+        .alert.alert-info(role='alert') Species
+        #species-selector
+        #species-search(style='margin-top:3px')
+        .dc_data_count(style='margin-top:3px')
+      br
+      br
+      br
+      br
+
     include footer
 
     script(src='javascripts/third_party/gifffer.min.js')
