update jade using new msa.css

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,10 +17,12 @@ html
     link(rel="stylesheet", type="text/css", href='stylesheets/dataTables-customized.css')
     //-link(rel="stylesheet", type="text/css", href='stylesheets/select.bootstrap.css')
     //- link(rel="stylesheet", type="text/css", href='stylesheets/jquery.dataTables.min.css')
-    link(rel="stylesheet", type="text/css", href='stylesheets/msa-new.css')
+    //link(rel="stylesheet", type="text/css", href='stylesheets/msa-old.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/msa.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/d3-tip.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/autocomplete.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/page-appearance.css')
+
     link(rel="stylesheet", type="text/css", href='stylesheets/autohiding-navbar2.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/footer.css')
 
