add msa css source

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,6 +18,7 @@ html
     //-link(rel="stylesheet", type="text/css", href='stylesheets/select.bootstrap.css')
     //- link(rel="stylesheet", type="text/css", href='stylesheets/jquery.dataTables.min.css')
     //link(rel="stylesheet", type="text/css", href='stylesheets/msa-old.css')
+    //source: style details from http://msa.biojs.net/app/
     link(rel="stylesheet", type="text/css", href='stylesheets/msa.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/d3-tip.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/autocomplete.css')
