--- a/views/home.jade
+++ b/views/home.jade
@@ -18,23 +18,17 @@ html
         br
         br
         br
-        br
-        br
       .row.panX-text
-        #logo.col-md-2
-          img(src='images/pan-blue-noReads.svg', style='width:230;height:209px;')
-          .col-md-2
+        #logo.col-md-3
+          img(src='images/pan-blue-noReads.svg', style='width:100%;')
+          //.col-md-2
         .col-md-8
           br
-          p panX consists of a pan-genome identification pipeline and an web-application for interactive visualization of the pan-genome. The pipeline is implemented in python and is based on DIAMOND and MCL.
-          p The web application consists of interactive connected tree viewers for the species tree and individual gene trees, an alignment viewer, and charts displaying pan-genome statistics. Gene clusters can be searched and filtered by name, annotation, and their phylogenetic properties such as diversity or the number of gene gain/loss events.
+          p panX comprises a pan-genome identification pipeline and a web application for interactive visualization of the pan-genome. The pipeline is based on DIAMOND, MCL and phylogeny-aware post-processing.
+          p The web application encompasses interactively connected tree viewers for the species tree and individual gene trees, an alignment viewer, and charts displaying pan-genome statistics. Gene clusters can be rapidly searched and filtered by gene name, annotation, and their phylogenetic properties such as diversity or the number of gene gain/loss events.
 
-          p Metadata associated with the strains and gene presence/absence patterns can be mapped onto the species tree. Such mapping facilitate the identification of genes associated with particular ecological niches, phenotypes such as antibiotic resistance, virulence, or epidemiological parameters such as host age.
-      br
-      br
-      br
-      h3 Show cases of panX functionalities:
-      br
+          p Metadata associated with the strains and gene presence/absence patterns can be mapped onto the species tree. Such mapping facilitates the identification of genes associated with particular ecological niches, phenotypes such as antibiotic resistance, virulence, or epidemiological parameters such as host age.
+      p(style='font-size:22px') Showcases of panX functionalities:
       .row.panX-text
         .col-md-6
           .thumbnail.shadow_homepagex
@@ -42,8 +36,9 @@ html
               h4 Epidemiology of 616 Streptococcus pneumoniae strains
               p
                 a(href='https://www.nature.com/articles/sdata201558') Croucher et al. (2015)
-              p
-                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Sp616') Demo
+                span(style="display:inline-block; width:5px;")
+                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Sp616')  Demo
+                span(style="display:inline-block; width:2px;")
                 a.btn.btn-default(href='./S_pneumoniae616', role='button') Explore
             a(href='./S_pneumoniae616')
               img(src='./images/Demo-Sp616.gif', alt='...', style='width:100%;height:320px')
@@ -54,8 +49,9 @@ html
               h4 Diverse Prochlorococcus genomes: gene gain/loss pattern
               p
                 a(href='https://www.nature.com/articles/sdata201434') Biller et al. (2014)
-              p
+                span(style="display:inline-block; width:5px;")
                 a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Pm') Demo
+                span(style="display:inline-block; width:2px;")
                 a.btn.btn-default(href='./P_marinus_meta', role='button') Explore
             a(href='./P_marinus_meta')
               img(src='./images/Pm_case.png', alt='...', style='width:100%;height:320px')
@@ -68,6 +64,12 @@ html
               p
                 a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#myModal') Demo
                 a.btn.btn-default(href='#', role='button') Explore
+      p(style='font-size:22px') Pan-genomes from NCBI RefSeq genomes:
+      #dc_data_count.col-md-2
+        .alert.alert-info(role='alert') Species
+        #species-selector
+        #species-search(style='margin-top:3px')
+        .dc_data_count(style='margin-top:3px')
       //.row.panX-text
         .col-md-6
           .thumbnail.shadow_homepagex
@@ -109,17 +111,6 @@ html
               img(src='./images/Demo-Pm.gif', style='width:100%;')
             .modal-footer
               button.btn.btn-info(type='button', data-dismiss='modal') Close
-
-      br
-      br
-      br
-      h3 Pan-genomes from NCBI RefSeq genomes:
-      br
-      #dc_data_count.col-md-2
-        .alert.alert-info(role='alert') Species
-        #species-selector
-        #species-search(style='margin-top:3px')
-        .dc_data_count(style='margin-top:3px')
       br
       br
       br
