--- a/views/home.jade
+++ b/views/home.jade
@@ -7,6 +7,7 @@ html
     link(rel='stylesheet', type='text/css', href='stylesheets/bootstrap.min.css', media='screen')
     link(rel='stylesheet', type='text/css', href='stylesheets/autohiding-navbar2.css', media='screen')
     link(rel='stylesheet', type='text/css', href='stylesheets/footer.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/autocomplete.css')
     link(type='text/css', rel='stylesheet', href='stylesheets/page-appearance.css')
     link(rel='stylesheet', type='text/css', href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
     title panX
@@ -65,11 +66,10 @@ html
                 a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#myModal') Demo
                 a.btn.btn-default(href='#', role='button') Explore
       p(style='font-size:22px') Pan-genomes from NCBI RefSeq genomes:
-      #dc_data_count.col-md-2
+      #dc_data_count.col-md-3
         .alert.alert-info(role='alert') Species
         #species-selector
         #species-search(style='margin-top:3px')
-        .dc_data_count(style='margin-top:3px')
       //.row.panX-text
         .col-md-6
           .thumbnail.shadow_homepagex
@@ -124,7 +124,11 @@ html
       Gifffer();
       }
 
+    script.
+      var speciesAbbr='S_pneumoniae616'
+    script(src='javascripts/species-list-info.js')
     script(src='javascripts/third_party/jquery.min.js')
     script(src='javascripts/third_party/bootstrap.min.js')
     script(src='javascripts/third_party/jquery.bootstrap-autohidingnavbar.min.js')
     script(src='javascripts/third_party/call-autohidingnavbar.js')
+    script(src='dist/homepage.js')
