--- a/views/S_pneumoniae616.jade
+++ b/views/S_pneumoniae616.jade
@@ -4,3 +4,4 @@ block content
     script.
       var speciesAbbr='S_pneumoniae616'
     script(src='dataset/S_pneumoniae616/metaConfiguration.js')
+    script(src='dataset/S_pneumoniae616/newColumnConfig.js')
