--- a/views/home.jade
+++ b/views/home.jade
@@ -21,7 +21,7 @@ html
         br
       .row.panX-text
         #logo.col-md-3
-          img(src='images/pan-blue-noReads.svg', style='width:100%;')
+          img.homepage_logo(src='images/pan-blue-noReads.svg')
           //.col-md-2
         .col-md-8
           br
@@ -42,7 +42,7 @@ html
                 span(style="display:inline-block; width:2px;")
                 a.btn.btn-default(href='./S_pneumoniae616', role='button') Explore
             a(href='./S_pneumoniae616')
-              img(src='./images/Demo-Sp616.gif', alt='...', style='width:100%;height:320px')
+              img(src='./images/Demo-Sp616.gif', alt='...')
 
         .col-md-6
           .thumbnail.shadow_homepagex
@@ -55,7 +55,8 @@ html
                 span(style="display:inline-block; width:2px;")
                 a.btn.btn-default(href='./P_marinus_meta', role='button') Explore
             a(href='./P_marinus_meta')
-              img(src='./images/Pm_case.png', alt='...', style='width:100%;height:320px')
+              img(src='./images/Pm_case.png', alt='...')
+              //, style='width:100%;height:320px'
         //.col-md-4
           .thumbnail.shadow_homepagex
             img(src='./images/comparative-dashborad.jpg', alt='...', style='width:100%;')
