--- a/views/footer.jade
+++ b/views/footer.jade
@@ -50,5 +50,8 @@ footer.footer-distributed
       .footer-right
         p.footer-website-about
           span About panX
-          |         panX is a powerful interactive platform for pan-genome exploration. It provides multiple different views on annotated genomes and allows rapid search by gene name, diversity, duplications, etc. Strain-specific meta-data is integrated into the phylogenetic tree viewer such that associations between gene presence and phenotypes can be spotted.
-          |         Comments, suggestions for improvements, bug reports etc are welcome.
+          | panX is a powerful interactive platform for pan-genome exploration. It provides multiple different views on annotated genomes and allows rapid search by gene name, diversity, duplications, etc. Strain-specific meta-data is integrated into the phylogenetic tree viewer such that associations between gene presence and phenotypes can be spotted.
+          span
+            a(href='mailto:wei.ding@tuebingen.mpg.de,richard.neher@unibas.ch')
+              u Comments, suggestions for improvements, bug reports etc
+              |  are very welcome.
