--- a/views/navbar_pipeline.jade
+++ b/views/navbar_pipeline.jade
@@ -6,7 +6,7 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='./home')  panX: pan-genome analysis & exploration
+      a.navbar-brand(href='./home')  panX: Pan-genome analysis & exploration
     .navbar-collapse.collapse
       ul.nav.navbar-nav
         li
