--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -6,7 +6,7 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='./home')  Pan-genome Analysis & Exploration  
+      a.navbar-brand(href='./home')  panX: Pan-genome Analysis & Exploration
     .navbar-collapse.collapse
       ul.nav.navbar-nav
         li.active
@@ -17,4 +17,4 @@
           a(href='tutorial') Tutorials
       ul.nav.navbar-nav.navbar-right
         li
-          a(href='#contacts')  Contact 
+          a(href='#contacts')  Contact
