--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,57 +1,58 @@
 footer.footer-distributed
-      .footer-left
-        img(src='images/pan-white-out.svg',style='width:60%')
-        p.footer-links
-          a(href='./')
-            u Applications
-          |         |
-          a(href='./pipeline')
-            u Methods
-          |         |
-          a(href='./tutorial')
-            u Tutorials
-          p.footer-author Software and website: Wei Ding and Richard Neher
-          p.footer-author Logo and website &copy; 2016 Wei Ding
-      .footer-center
-        #contacts
-          i.fa.fa-envelope
-          p
-            span
-              a(href='mailto:wei.ding@tuebingen.mpg.de')
-                u wei.ding at tuebingen.mpg.de
-
-            span
-              a(href='mailto:richard.neher@unibas.ch')
-                u richard.neher at unibas.ch
-        #address
-          i.fa.fa-map-marker
-          p
-            span
-              br
-            span
-              a(href='http://www.eb.tuebingen.mpg.de/')
-                u Max Planck Institute for Developmental Biology
-            span  Spemannstrasse 35, 72076 Tuebingen, Germany
-            span
-              a(href='http://www.biozentrum.unibas.ch/')
-                u Biozentrum, University of Basel
-            span  Klingelbergstrasse 50/70, CH-4056 Basel, Switzerland
-        #repo
-          i.fa.fa-github
-          p
-            span
-              br
-            span
-              a(href='https://github.com/neherlab/pan-genome-analysis')
-                u pan-genome-analysis
-            span
-              a(href='https://github.com/neherlab/pan-genome-visualization/')
-                u pan-genome-visualization
-      .footer-right
-        p.footer-website-about
-          span About panX
-          | panX is a powerful interactive platform for pan-genome exploration. It provides multiple different views on annotated genomes and allows rapid search by gene name, diversity, duplications, etc. Strain-specific meta-data is integrated into the phylogenetic tree viewer such that associations between gene presence and phenotypes can be spotted.
+  .row
+    .footer-left.col-md-4
+      img(src='images/pan-white-out.svg',style='width:230;height:209px;')
+      p.footer-links
+        a(href='./')
+          u Applications
+        |         |
+        a(href='./pipeline')
+          u Methods
+        |         |
+        a(href='./tutorial')
+          u Tutorials
+        p.footer-author Software and website: Wei Ding and Richard Neher
+        p.footer-author Logo and website &copy; 2016 Wei Ding
+    .footer-center.col-md-4
+      #contacts
+        i.fa.fa-envelope
+        p
           span
-            a(href='mailto:wei.ding@tuebingen.mpg.de,richard.neher@unibas.ch')
-              u Comments, suggestions for improvements, bug reports etc
-              |  are very welcome.
+            a(href='mailto:wei.ding@tuebingen.mpg.de')
+              u wei.ding at tuebingen.mpg.de
+
+          span
+            a(href='mailto:richard.neher@unibas.ch')
+              u richard.neher at unibas.ch
+      #address
+        i.fa.fa-map-marker
+        p
+          span
+            br
+          span
+            a(href='http://www.eb.tuebingen.mpg.de/')
+              u Max Planck Institute for Developmental Biology
+          span  Tuebingen, Germany
+          span
+            a(href='http://www.biozentrum.unibas.ch/')
+              u Biozentrum, University of Basel
+          span  Basel, Switzerland
+      #repo
+        i.fa.fa-github
+        p
+          span
+            br
+          span
+            a(href='https://github.com/neherlab/pan-genome-analysis')
+              u pan-genome-analysis
+          span
+            a(href='https://github.com/neherlab/pan-genome-visualization/')
+              u pan-genome-visualization
+    .footer-right.col-md-4
+      p.footer-website-about
+        span About panX
+        | panX is a powerful interactive platform for pan-genome analysis and exploration. It provides multiple different views on annotated genomes and allows rapid search by gene name, diversity, gene gain and loss event, etc. Strain-specific meta-data is integrated into the phylogenetic tree viewer such that associations between gene presence and phenotypes (resistance,virulence,etc) can be easily spotted.
+        span
+          a(href='mailto:wei.ding@tuebingen.mpg.de,richard.neher@unibas.ch')
+            u Comments, suggestions for improvements, bug reports etc
+            |  are welcome.
