--- a/views/pipeline.jade
+++ b/views/pipeline.jade
@@ -67,7 +67,7 @@ html
           #overview
             p
               b Input:
-              |  RefSeq records from NCBI/ user's own genomes (GenBank format)
+              |  RefSeq records from NCBI/ user's own genome sequences (GenBank format)
             p
               b Clustering: DIAMOND + MCL + phylogeny-based post-processing
             br
