--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -10,7 +10,7 @@
     .navbar-collapse.collapse
       ul.nav.navbar-nav
         li.active
-          a(href='./') Applications
+          a(href='./S_pneumoniae616') Applications
         li
           a(href='pipeline') Pipeline
         li
