--- a/views/navbar_pipeline.jade
+++ b/views/navbar_pipeline.jade
@@ -10,7 +10,7 @@
     .navbar-collapse.collapse
       ul.nav.navbar-nav
         li
-          a(href='./') Applications
+          a(href='./S_pneumoniae616') Applications
         li.active
           a(href='pipeline') Methods
         li
