--- a/views/pipeline.jade
+++ b/views/pipeline.jade
@@ -67,7 +67,9 @@ html
           #overview
             p
               b Input:
-              |  RefSeq records from NCBI/ user's own genome sequences (GenBank format)
+              strong  RefSeq
+              |  records from NCBI/
+              strong  user's own genome sequences (GenBank format)
             p
               b Clustering: DIAMOND + MCL + phylogeny-based post-processing
             br
