--- a/views/pipeline.jade
+++ b/views/pipeline.jade
@@ -72,12 +72,40 @@ html
               strong  user's own genome sequences (GenBank format)
             p
               b Clustering: DIAMOND + MCL + phylogeny-based post-processing
-            br
             .item
               figure
                 img(src='./images/panX-pipeline.png', alt='...', style='width:100%;')
                 br
-                figcaption Fig.1 A overview of pan-genome analysis and visualization pipeline.
+                br
+                figcaption
+                  p.narrow Fig.1 A overview of pan-genome analysis and visualization pipeline.
+                  p.narrow
+                    b  panX analysis pipeline
+                    |  is based on DIAMOND, MCL and phylogeny-aware post-processing to determine clusters of orthologous genes from a collection of annotated genomes. panX generates a strain/species tree based on core genome SNPs and a gene tree for each gene cluster.
+                  p.narrow
+                    b panX interactive visualization:
+                  p.narrow
+                    b (1)
+                    |  The dynamic profile charts allow rapid filtering and selection of gene subsets in cluster table;
+                  p.narrow clicking a gene cluster in cluster table loads
+                    b  (2)
+                    |  related alignment,
+                    b  (3)
+                    |  individual gene tree and
+                    b  (4)
+                    |  gene presence/absence and gain/loss pattern on species/strain tree;
+                  p.narrow
+                    b  (5)
+                    |  Selecting sequences in alignment highlights associated strains on species/strain tree;
+                  p.narrow
+                    b  (6) (7)
+                    |  Species/strain tree interacts with gene tree in various ways;
+                  p.narrow
+                    b  (8)
+                    |  Zooming into a clade on species/strain tree screens strains in metadata table;
+                  p.narrow
+                    b  (9)
+                    |  Searching in metadata table display strains pertinent to specific meta-information.
           br
           #DIAMOND
             .alert.alert-info(role='alert') DIAMOND
